test/expected/declare_fiv_v.out
declare f as function ( x as int, void ) returning void
                                  ^
35: error: "void" must be only parameter if specified
